--- a/drupal/sites/all/themes/pivot/sass/_pivot-homepage-hero-responsive.scss
+++ b/drupal/sites/all/themes/pivot/sass/_pivot-homepage-hero-responsive.scss
@@ -96,9 +96,11 @@
   	.tpslide_wrapper {
       h3.headline {
     		text-align: center;
+        font-size: 40px;
     	}
     	p.description{
     		text-align: center;
+        font-size: 18px;
     	}
     }
     p.more  {
